apps/filebrowser/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: filebrowser
  labels:
    inject-ca-bundle: "true"
